--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -1,12 +1,5 @@
-{% extends 'base.html' %}
-
-{% block page_title %}{{ user}}'s Profile{% endblock %}
-
-{% block page_heading %}{{ user}}'s Profile{% endblock %}
-
-
+{% extends "base.html" %}
 {% block content %}
-<div class="container-fluid">
-<p>{{ profile.email }}</p>
-</div>
+    <h2>Success!</h2>
+    <p>You are logged in as {{ user.email }} </p>
 {% endblock %}
